testsuite/tests/typecheck/should_compile/T13594.stderr

T13594.hs:8:1: error:
    Top-level strict bindings aren't allowed: !x = (1, 2)
