testsuite/tests/typecheck/should_compile/T13594.hs
{-# LANGUAGE BangPatterns #-}
{-# LANGUAGE GADTs #-}
{-# LANGUAGE RankNTypes #-}

module Bug where

x :: forall a b. (a ~ Integer, b ~ Integer) => (a, b)
!x = (1, 2)
